# DODInvestigations

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  app.cpp  app.hpp  colour.hpp  main.cpp  profilingConfig.h.in  programConfig.h.in  spec.txt
oopVersion/: CMakeLists.txt  PostMortem.txt  app.cpp  app.hpp  drawCall.hpp  testOOP.cpp  testOOP.hpp
oopVersion/animations/: CMakeLists.txt  animatedInterface.hpp  animatedObject.cpp  animatedObject.hpp  animation.cpp  animation.hpp  animationBase.hpp  animationChain.cpp  animationChain.hpp  animationColour.cpp  animationColour.hpp  animationController.cpp  animationController.hpp  animationDeform.cpp  animationDeform.hpp  animationHealth.cpp  animationHealth.hpp  animationInterface.hpp  animationLibrary.cpp  animationLibrary.hpp  animationLibraryEntry.cpp  animationLibraryEntry.hpp  animationModifyVector.cpp  animationModifyVector.hpp  animationTranslate.cpp  animationTranslate.hpp
oopVersion/animations/animationLibrary/: CMakeLists.txt  animatedObject.hpp  animatedObjectType.hpp  animationId.hpp  animationLibrary.cpp  animationLibrary.hpp  animationLibraryEntry.cpp  animationLibraryEntry.hpp
oopVersion/easing/: CMakeLists.txt  easingFunction.hpp
oopVersion/enemies/: CMakeLists.txt  enemy.cpp  enemy.hpp  enemyBatch.cpp  enemyBatch.hpp  enemyController.cpp  enemyController.hpp  enemyWithHealth.cpp  enemyWithHealth.hpp
oopVersion/enemies/attachments/: CMakeLists.txt  attachmentBase.hpp  attachmentKnife.cpp  attachmentKnife.hpp  attachmentShield.cpp  attachmentShield.hpp  attachmentSpear.cpp  attachmentSpear.hpp
oopVersion/events/: CMakeLists.txt  bgColourChangeEventListener.cpp  bgColourChangeEventListener.hpp  dummyEventListener.cpp  dummyEventListener.hpp  eventListener.hpp  eventManager.cpp  eventManager.hpp  eventType.hpp  timedEventFirer.cpp  timedEventFirer.hpp
oopVersion/geometry/: CMakeLists.txt  point.hpp  vector.hpp
oopVersion/interfaces/: CMakeLists.txt  colourHaverInterface.hpp  healthHaverInterface.hpp  rectHaverInterface.hpp  vectorHaverInterface.hpp
oopVersion/scene/: CMakeLists.txt  scene.cpp  scene.hpp
oopVersion/utils/: CMakeLists.txt  drawingUtils.cpp  drawingUtils.hpp  globals.cpp  globals.hpp  world.cpp  world.hpp
